--- a/panel/assets/index.html
+++ b/panel/assets/index.html
@@ -4,7 +4,7 @@
     <title>Enoki Panel</title>
     <meta charset="utf8-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" href="/index.css"/> 
+    <link rel="stylesheet" href="/custom.css"/> 
   </head>
   <body>
     <main></main>
