--- a/panel/assets/index.html
+++ b/panel/assets/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/custom.css"/> 
   </head>
   <body>
+    <div id="panel"></div>
     <main></main>
     <script src="/bundle.js"></script>
   </body>
