starting to read panel version number

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <title>Enoki Panel</title>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" href="/panel/assets/custom.css"/> 
+    <link rel="stylesheet" href="./assets/custom.css"/> 
   </head>
   <body>
-    <main></main>
-    <script src="/panel/bundles/bundle.js"></script>
+    <script src="./bundles/bundle.js"></script>
   </body>
 </html>
