--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/custom.css"/> 
   </head>
   <body>
+    <main></main>
     <script src="./bundles/bundle.js"></script>
   </body>
 </html>
