--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Enoki Panel</title>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" href="./assets/custom.css"/> 
+    <link rel="stylesheet" href="./bundles/bundle.css"/> 
   </head>
   <body>
     <main></main>
