--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Enoki Panel</title>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" href="./bundles/bundle.css"/> 
+    <link rel="stylesheet" href="/bundles/bootstrap/bootstrap.css" data-bootstrapstyles>
   </head>
   <body>
-    <main></main>
-    <script src="./bundles/bundle.js"></script>
+    <div class="bootstrap-load"></div>
+    <script src="/bundles/bootstrap/bootstrap.js"></script>
   </body>
 </html>
