--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="/bundles/bootstrap/bootstrap.css" data-bootstrapstyles>
+    <meta name="description" content="An experimental tool for self-publishing on the peer-to-peer web">
+    <meta property="og:title" content="Enoki Panel">
+    <meta name="twitter:title" content="Enoki Panel">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:url" content="https://panel.enoki.site">
+    <meta name="twitter:description" content="An experimental tool for self-publishing on the peer-to-peer web">
+    <meta property="og:description" content="An experimental tool for self-publishing on the peer-to-peer web">
+    <meta name="twitter:image" content="https://panel.enoki.site/meta.jpg">
+    <meta property="og:image" content="https://panel.enoki.site/meta.jpg">
   </head>
   <body>
     <div class="bootstrap-load"></div>
