--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:description" content="An experimental tool for self-publishing on the peer-to-peer web">
     <meta name="twitter:image" content="https://panel.enoki.site/assets/meta.jpg">
     <meta property="og:image" content="https://panel.enoki.site/assets/meta.jpg">
+    <link rel="stylesheet" href="/bundles/bootstrap/bootstrap.css"> 
   </head>
   <body>
     <div class="bootstrap-load"></div>
